tests/negative/test_ret_no_drop.orb
data Foo {
    x:i32
} (fnc dropFoo (val:Foo::noDrop) () {});

fnc bar (f:Foo::noDrop) () {
    ret f;
};

fnc main () () {};